# Game-of-Life

./: CMakeLists.txt  GameOfLife.cpp  GameOfLifeTest.cpp  README.md  main.cpp
